deploying-laravel-application/laravel-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: laravel-deployment
  labels:
    app: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      name: laravel
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: jxlwqq/laravel-kubernetes-demo
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: laravel-service
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
